Actualizamos al espaniol la imagen de usos y resoluciones de los satelites

--- a/Nivel0-A/Guia/guia.tex
+++ b/Nivel0-A/Guia/guia.tex
@@ -88,13 +88,13 @@ La resolución espacial nos da una idea de que objenos podemos distinguir en el 
 
 A su vez la resolución temporal nos da una idea de cual es el fenomeno que varía en el tiempo más corto que podemos ver. Por ejemplo, una resolución temporal de $15$ días nos permitirá estudiar como cambia la vegetación a lo largo de las estaciones pero no como cambian las nubes a lo largo de un día.
 
-
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.5\textwidth]{fig:evst.jpg}
+    \includegraphics[width=0.85\textwidth]{fig:evst.png}
     \caption{}
     \label{fig:evst}
 \end{figure}
+
 
 Ambas resoluciones suelen estar relacionadas (Figura \ref{fig:evst}), de forma que al aumentar una disminuye la otra. Por ejemplo: GOES, una satélite meteorológico, tiene una muy alta revisita temporal, cercana a los 15 minutos mientras que su resolución espacial es baja, cercana a los 4km. En el otro extremo, SPOT 7 tiene una alta resolución espacial, de hasta $1.5$m, pero con una revisita temporal del orden del mes.
 
