Agregamos la guia con el grafico de las firmas espectrales

--- a/Nivel0-A/Guia/guia.tex
+++ b/Nivel0-A/Guia/guia.tex
@@ -176,7 +176,7 @@ Para mejorar la detección del incendio es necesario entender que un satélite, 
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.9\textwidth]{fig:spec.jpg}
+    \includegraphics[width=0.9\textwidth]{fig:spec.png}
     \caption{Firmas espectrales para el agua, suelo y vegetación.}
     \label{fig:spec}
 \end{figure}
