Agregamos la presentación para el curso de nivel 0

--- a/Nivel0-A/Videos/biblio.bib
+++ b/Nivel0-A/Videos/biblio.bib
@@ -1,3 +1,39 @@
+@misc{wiki:rs,
+    author = "Wikipedia",
+    title = "Remote sensing --- Wikipedia{,} The Free Encyclopedia",
+    year = "2017",
+    url = "https://en.wikipedia.org/w/index.php?title=Remote_sensing&oldid=798949261",
+    note = "[Online; accessed
+25-September-2017
+]"
+  }
+@misc{web:smos,
+      author = "ESA",
+      title = "SMOS SOIL MOISTURE INDEX",
+      year = "2012",
+      url = "http://m.esa.int/spaceinimages/Images/2012/06/SMOS_soil_moisture_index",
+      note = "[Online; accessed
+  25-September-2017
+  ]"
+    }
+@misc{web:lc,
+  author = "ESA",
+  title = "ESA/CCI Land Cover Map",
+  year = "2014",
+  url = "http://maps.elie.ucl.ac.be/CCI/viewer/index.php",
+  note = "[Online; accessed
+25-September-2017
+]"
+}
+
+@misc{ web:cl,
+  author = "NASA",
+  title = "Global Chlorophyll",
+  url = "https://earthobservatory.nasa.gov/IOTD/view.php?id=4097",
+  note = "[Online; accessed
+25-September-2017
+]"
+}
 
 @Article{	  asner1998biophysical,
   title		= {Biophysical and biochemical sources of variability in
