Correcciones a las presentaciones

--- a/Nivel0-A/Videos/presentacion.tex
+++ b/Nivel0-A/Videos/presentacion.tex
@@ -6,10 +6,11 @@
 \input{preamble.tex}
 \usepackage{multimedia}
 
-\title{Interpretación visual}
+\title{Interpretación visual con herramientas web}
 \subtitle{Nivel 0}
 
 \author{Marina Compagnucci \and Francisco Nemiña}
+
 
 \institute{Unidad de Educación y Formación Masiva \\ Comisión Nacional de Actividades Espaciales}
 
@@ -25,11 +26,11 @@
   \tableofcontents[hideallsubsections]
 \end{frame}
 
-\section{La teledetección}
+\section{Teledetección}
 \subsection{Definición}
 \begin{frame}{\secname : \subsecname}
     \begin{block}{Definición}
-    La teledetección es medir un sistema sin estar en contacto con el. En particular, en el contexto espacial, hablamos de teledetección cuando hablamos de las mediciones de la tierra realizadas por un satélite
+    La teledetección es medir un sistema sin estar en contacto con él. En particular, en el contexto espacial, hablamos de teledetección cuando hablamos de las mediciones de la tierra realizadas por un satélite
     \end{block}
 \end{frame}
 %--- Next Frame ---%
@@ -104,9 +105,9 @@
 \subsection{Tradicional}
 \begin{frame}{\secname : \subsecname}
     \begin{itemize}[<+->]
-        \item Obtención de los productos satelitales de su agencia espacial amiga.
-        \item Pre-procesamiento de los productos utilizando softwares especificos de procesamiento de imagenes.
-        \item Obtención de datos mediante el uso de softwares de GIS y estadísticos.
+        \item Obtener los productos satelitales de su agencia espacial amiga.
+        \item Preprocesar los productos utilizando algún software procesamiento de imágenes.
+        \item Obtener los datos deseados.
     \end{itemize}
 \end{frame}
 %--- Next Frame ---%
@@ -115,8 +116,8 @@
 \begin{frame}{\secname : \subsecname}
     \begin{itemize}[<+->]
         \item Conectarse a un sitio web que disponga de las productos deseados.
-        \item Pre-procesamiento de los productos utilizando las capacidades web.
-        \item Obtención de datos a partir del procesamiento y su posterior publicación.
+        \item Procesar los productos utilizando la computadora de otro..
+        \item Obtener los datos deseados.
     \end{itemize}
 \end{frame}
 %--- Next Frame ---%
@@ -244,7 +245,7 @@
     \begin{figure}[h!]
     \centering
     \movie[width = 0.6 \textwidth,loop]{\centering\includegraphics[width=0.6\textwidth]{Pic.png}}{./figs/1.mp4}
-    \caption{Evolución del huracan Maria en el mes de septiembre. (\href{https://goo.gl/M5595z}{https://goo.gl/M5595z}).}
+    \caption{Evolución del huracán María en el mes de septiembre. (\href{https://goo.gl/M5595z}{https://goo.gl/M5595z}).}
     \end{figure}
 \end{frame}
 %--- Next Frame ---%
@@ -256,7 +257,7 @@
     \begin{figure}[h!]
         \centering
         \includegraphics[width=0.7\textwidth]{fig:evst.png}
-        \caption{Comparación de distintos usos de productos satelitales y las resoluciones espaciales y temporales necesarias.}
+        \caption{Comparación de distintos usos de productos satelitales por resolución espacial y temporal.}
         \label{fig:evst}
     \end{figure}
 \end{frame}
@@ -266,7 +267,7 @@
 
 \begin{frame}{\secname : \subsecname}
     \begin{alertblock}{Resolución espacial y temporal}
-        Comparación de imágenes con distintas resoluciones espaciles y temporales.
+        Comparación de imágenes con distintas resoluciones espaciales y temporales.
     \end{alertblock}
 \end{frame}
 %--- Next Frame ---%
@@ -311,7 +312,7 @@
     \begin{figure}[h!]
         \centering
         \includegraphics[width=0.8\textwidth]{fig:spec.png}
-        \caption{Firmas espectrales de distintass coberturas en otras zonas del espectro.}
+        \caption{Firmas espectrales de distintas coberturas en otras zonas del espectro.}
         \label{fig:spec}
     \end{figure}
 \end{frame}
@@ -371,7 +372,7 @@
 \section{Capacitaciones}
 \subsection{CONAE}
 \begin{frame}{\secname : \subsecname}
-    \begin{block}{Areas de capacitación}
+    \begin{block}{Áreas de capacitación}
     \begin{itemize}
         \item Unidad de educación
         \begin{itemize}
@@ -386,6 +387,7 @@
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
+    \centering
     Muchas gracias.
 \end{frame}
 %--- Next Frame ---%
